crates/ruff_linter/src/rules/flake8_future_annotations/snapshots/ruff_linter__rules__flake8_future_annotations__tests__from_typing_import_many.py.snap
---
source: crates/ruff_linter/src/rules/flake8_future_annotations/mod.rs
---
from_typing_import_many.py:5:13: FA100 (future-rewritable-type-annotation) [*] Add `from __future__ import annotations` to simplify `typing.List`
  |
4 | def main() -> None:
5 |     a_list: List[Optional[str]] = []
  |             ^^^^ FA100 (future-rewritable-type-annotation)
6 |     a_list.append("hello")
7 |     a_dict = cast(Dict[int | None, Union[int, Set[bool]]], {})
  |
  = help: Add `from __future__ import annotations`

ℹ Unsafe fix
  1 |+from __future__ import annotations
1 2 | from typing import Dict, List, Optional, Set, Union, cast
2 3 | 
3 4 | 

from_typing_import_many.py:5:18: FA100 (future-rewritable-type-annotation) [*] Add `from __future__ import annotations` to simplify `typing.Optional`
  |
4 | def main() -> None:
5 |     a_list: List[Optional[str]] = []
  |                  ^^^^^^^^ FA100 (future-rewritable-type-annotation)
6 |     a_list.append("hello")
7 |     a_dict = cast(Dict[int | None, Union[int, Set[bool]]], {})
  |
  = help: Add `from __future__ import annotations`

ℹ Unsafe fix
  1 |+from __future__ import annotations
1 2 | from typing import Dict, List, Optional, Set, Union, cast
2 3 | 
3 4 |
