crates/ruff_linter/src/rules/flake8_future_annotations/snapshots/ruff_linter__rules__flake8_future_annotations__tests__import_typing_as.py.snap
---
source: crates/ruff_linter/src/rules/flake8_future_annotations/mod.rs
---
import_typing_as.py:5:13: FA100 (future-rewritable-type-annotation) [*] Add `from __future__ import annotations` to simplify `typing.List`
  |
4 | def main() -> None:
5 |     a_list: t.List[str] = []
  |             ^^^^^^ FA100 (future-rewritable-type-annotation)
6 |     a_list.append("hello")
  |
  = help: Add `from __future__ import annotations`

ℹ Unsafe fix
  1 |+from __future__ import annotations
1 2 | import typing as t
2 3 | 
3 4 |
